--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.562.0",
     "marked": "^14.1.0",
     "next": "^14.2.7",
     "next-mdx-remote": "^5.0.0",
