--- a/config/config.json
+++ b/config/config.json
@@ -46,7 +46,7 @@
     "content": "BT House với kinh nghiệm thi công nội thất có quy trình rõ ràng từ lên ý tưởng thiết kế 3D cho khách hàng. <br/> và sản phẩm được sản xuất tại xưởng riêng và lắp đặt bàn giao đến khách hàng.",
     "button": {
       "label": "Gửi tin nhắn",
-      "link": "https://www.facebook.com/noithat.bthouse.vn"
+      "link": "https://m.me/noithat.bthouse.vn"
     }
   },
 
